# Recap-Project-6

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  compose.yaml  pyproject.toml
.claude/skills/implement/: SKILL.md
.claude/skills/plan/: SKILL.md
.claude/skills/refine/: SKILL.md
.claude/skills/review/: SKILL.md
.claude/skills/work-ticket/: SKILL.md
.github/workflows/: ci.yml
ai_assistant/: services.py
config/: settings.py  urls.py
scripts/: check-prerequisites.ps1  dev.ps1  move-ticket-to-status.ps1  select-next-ticket.ps1  set-phase.ps1
templates/: base.html  home.html
tests/: test_ai_assistant.py  test_ci_workflow.py  test_database.py  test_env_example.py  test_home.py  test_settings_security.py  test_setup.py
